# VisionFlow

./: .gitignore  docker-compose.yml
api/: Dockerfile  package-lock.json  package.json
api/src/: index.ts
api/src/cache/: redis.ts
api/src/proto/: graph.js
api/src/services/: duckdb.ts
docs/: architecture_golden_loop.md
engine/: Dockerfile  pyproject.toml  requirements.txt
engine/src/: main.py  orchestrator.py
engine/src/ai/: planner.py  retriever.py  router.py  schemas.py  synthesizer.py
engine/src/diff/: git_diff.py
engine/src/graph_builder/: ingester.py  schema.py
engine/src/indexers/: dispatcher.py
proto/: graph.proto
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
web/src/: main.tsx
web/src/api/: stream.ts
web/src/proto/: graph.d.ts  graph.js
web/src/renderer/: FBOPicker.ts  WebGLController.ts
web/src/shaders/: msdf.ts
web/src/ui/: App.tsx  GraphCanvas.tsx
web/src/workers/: protobuf.worker.ts
