[tool.poetry]
name = "visionflow-engine"
version = "0.1.0"
description = "SCIP indexing and DuckDB graph builder for VisionFlow"
authors = ["Antigravity"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^1.1.0"
scip = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
